# DFA-To-Minimal-Automaton

./: CMakeLists.txt  LFA_Tema2.cpp  README.md
